[package]
name = "flight-fusion-ipc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
base64 = "0.13"
prost = "0.10"
ring = "0.16"
thiserror = "1"
tonic = { version = "0.7", features = [
  "transport",
  "codegen",
  "prost",
  "tls-roots",
  "tls",
] }

[dev-dependencies]
pretty_assertions = "1.1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.10"
tonic-build = "0.7"
