[package]
name = "flight-fusion"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
area-store = { path = "../area-store/" }
arrow-deps = { path = "../arrow-deps/", features = ["delta"] }
file-cache = { path = "../file-cache" }
flight-fusion-ipc = { path = "../flight-fusion-ipc" }
object-store = { path = "../object-store" }
observability_deps = { path = "../observability-deps" }

# Crates.io dependencies
arrow-flight = "11"
async-trait = "0.1"
bytes = "1"
chrono = "^0.4"
config = "0.11"
dotenv = "0.15"
futures = "^0.3"
lazy_static = "1.4.0"
# libc = "0.2.103"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
parquet-format = "4"
prost = "0.9"
# tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "*", features = ["fs"] }
tokio-util = { version = "0.6.9", features = ["compat"] }
tonic = "0.7"
tonic-health = "0.5"
url = "^2.2"
uuid = "*"
# tonic-health = "0.5.0"
thiserror = "1"
log = "0.4"

[dev-dependencies]
utime = "0.3"
serial_test = "0"
pretty_assertions = "1"
tempfile = "3"
rand = "*"
