[package]
name = "flight-fusion"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
area-store = { path = "../area-store/" }
arrow-deps = { path = "../arrow-deps/", features = ["delta"] }
file-cache = { path = "../file-cache" }
flight-fusion-ipc = { path = "../flight-fusion-ipc" }
observability_deps = { path = "../observability-deps" }

# Crates.io dependencies
arrow-flight = "13"
async-trait = "0.1"
bytes = "1"
config = "0.13"
dotenv = "0.15"
futures = "^0.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
pin-project-lite = "0.2"
prost = "0.10"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
  "parking_lot",
] }
tokio-stream = { version = "*", features = ["fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
tonic = "0.7"
tonic-health = "0.6"
uuid = "*"
thiserror = "1"

[dev-dependencies]
utime = "0.3"
serial_test = "0"
pretty_assertions = "1"
tempfile = "3"
rand = "*"
