[package]
name = "kusto-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# git dependencies
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "21e23649f0fd7d10fddfb5bf54ea94dcc13e0eb0" }
azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "21e23649f0fd7d10fddfb5bf54ea94dcc13e0eb0" }

# crates.io dependencies
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
http = "0.2"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.2"

# workspace dependencies
arrow-deps = { path = "../arrow-deps", optional = true }

[features]
default = ["arrow"]
arrow = ["arrow-deps"]
mock_transport_framework = ["azure_core/mock_transport_framework"]
