[package]
name = "kusto-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# git dependencies
azure_core = { git = "https://github.com/roeap/azure-sdk-for-rust", branch = "datalake-ops" }
azure_identity = { git = "https://github.com/roeap/azure-sdk-for-rust", branch = "datalake-ops" }

# crates.io dependencies
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
http = "0.2"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.2"

# workspace dependencies
arrow-deps = { path = "../arrow-deps", optional = true }

[dev-dependencies]
dotenv = "0.15"

[features]
default = ["arrow"]
arrow = ["arrow-deps"]
mock_transport_framework = ["azure_core/mock_transport_framework"]
