[package]
name = "object-store"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
itertools = "0.10"
percent-encoding = "2"
reqwest = { version = "0.11", optional = true }
tempfile = "3.3.0"
thiserror = "*"
tokio = { version = "1.13", features = [
  "fs",
  "io-util",
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "time",
] }
tokio-util = { version = "0.6", features = ["codec", "io"] }
walkdir = "2"

# git dependencies
azure_core = { git = "https://github.com/roeap/azure-sdk-for-rust", rev = "b823f07543f1a240f16e3ff1861f60a72ca55637", optional = true }
azure_identity = { git = "https://github.com/roeap/azure-sdk-for-rust", rev = "b823f07543f1a240f16e3ff1861f60a72ca55637", optional = true }
azure_storage = { git = "https://github.com/roeap/azure-sdk-for-rust", rev = "b823f07543f1a240f16e3ff1861f60a72ca55637", optional = true }
azure_storage_blobs = { git = "https://github.com/roeap/azure-sdk-for-rust", rev = "b823f07543f1a240f16e3ff1861f60a72ca55637", optional = true }
azure_storage_datalake = { git = "https://github.com/roeap/azure-sdk-for-rust", rev = "b823f07543f1a240f16e3ff1861f60a72ca55637", optional = true }

[dev-dependencies]
dotenv = "*"
futures-test = "*"

[features]
default = ["azure"]
azure = [
  "azure_core",
  "azure_identity",
  "azure_storage",
  "azure_storage_blobs",
  "azure_storage_datalake",
]
