[package]
name = "object-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
itertools = "0.10"
percent-encoding = "2"
reqwest = { version = "0.11", optional = true }
tempfile = "3.3.0"
thiserror = "1"
tokio = { version = "1.13", features = [
  "fs",
  "io-util",
  "macros",
  "parking_lot",
  "rt-multi-thread",
  "time",
] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
walkdir = "2"

# git dependencies
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "66db4b485ce56b68be148708d9c810960a50be51", optional = true }
azure_identity = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "66db4b485ce56b68be148708d9c810960a50be51", optional = true }
azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "66db4b485ce56b68be148708d9c810960a50be51", optional = true }
azure_storage_blobs = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "66db4b485ce56b68be148708d9c810960a50be51", optional = true }
azure_storage_datalake = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "66db4b485ce56b68be148708d9c810960a50be51", optional = true }

# azure_core = { path = "../../../azure-sdk-for-rust/sdk/core", optional = true }
# azure_identity = { path = "../../../azure-sdk-for-rust/sdk/identity", optional = true }
# azure_storage = { path = "../../../azure-sdk-for-rust/sdk/storage", optional = true }
# azure_storage_blobs = { path = "../../../azure-sdk-for-rust/sdk/storage_blobs", optional = true }
# azure_storage_datalake = { path = "../../../azure-sdk-for-rust/sdk/storage_datalake", optional = true }


[dev-dependencies]
dotenv = "*"
futures-test = "*"
pretty_assertions = "1"

[features]
default = ["azure"]
azure = [
  "azure_core",
  "azure_identity",
  "azure_storage",
  "azure_storage_blobs",
  "azure_storage_datalake",
]
