[package]
name = "open-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
env_logger = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
log = "0.4.11"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "*"
url = "^2.2"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart", "gzip"]
