[package]
name = "open-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
chrono = "^0.4"
env_logger = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
log = "0.4.11"
tempfile = "*"
url = "^2.2"
http = "0.2"
bytes = "1"
async-trait = "0.1"
rand = "*"
reqwest-pipeline = { path = "../reqwest-pipeline" }
futures-util = "0.3"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart", "gzip"]

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
reqwest-pipeline = { path = "../reqwest-pipeline", features = ["mock_transport_framework"] }

[features]
mock_transport_framework = ["reqwest-pipeline/mock_transport_framework"]
